--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -4,7 +4,7 @@
 <input [(ngModel)]="query">
 <br>
 <br>
-<div class="row">
+<div class="row" style="border:1px solid black">
   <div class="col-md-3">Name</div>
   <div class="col-md-3">Genre</div>
   <div class="col-md-3">Author</div>
